Fixed pricing text, spacing and added seperators

--- a/src/templates/price-page/styles.scss
+++ b/src/templates/price-page/styles.scss
@@ -12,11 +12,19 @@
         border-radius: 0;
         line-height: 1;
         box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.17);
-        min-height: 277px;
+        min-height: 311px;
+    }
+    
+    .card-body {
+      background-color: #f5f5f5;
     }
     
     .card-body h5 {
       text-align: left;
+    }
+    
+    .price-page-sep {
+      border-bottom: 1px solid #ddd;
     }
 
     .price-page-h4-wrapper {
